# Barami

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_FILES.md  DOCKER_DEPLOYMENT.md  INSTALLATION_CHECKLIST.md  Makefile  QUICK_START.md  README.md  docker-compose.override.yml.bak  docker-compose.yml
.claude/: settings.json
.claude/skills/: docker-deployment.md  github-workflow.md  project-overview.md  react-dashboard.md  rust-api.md
docs/sprints/: sprint-1.md  sprint-2.md  sprint-3.md  sprint-4.md
scripts/: README.md  health-check.sh  logs.sh  start.sh  status.sh  stop.sh
services/admin-dashboard/: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.example.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
services/news-api/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  openapi.yaml  opensearch-test-data.sh  quick-start.sh  test-data.sql
services/news-api/src/: db.rs  error.rs  main.rs  search.rs
services/news-api/src/models/: article.rs  category.rs  mod.rs  stats.rs
services/news-api/src/routes/: categories.rs  health.rs  mod.rs  news.rs  stats.rs
services/news-dashboard/: .dockerignore  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.example.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
services/nginx/: Dockerfile  nginx.conf
(+33 files in other folders)
